<resources>
    <string name="app_name">DesafioShopper</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    BottomSheet-->
    <string name="text_title_bottom_sheet">Atenção</string>
    <string name="text_button_bottom_sheet">Fechar</string>

<!--    Home Fragment -->
    <string name="imagem_do_logo_home_fragment">Imagem do logo</string>
    <string name="text_request_home_fragment">Solicite sua viagem</string>
    <string name="text_id_home_fragment">Digite seu Id</string>
    <string name="text_origin_home_fragment">Digite sua origem</string>
    <string name="text_destination_home_fragment">Digite seu destino</string>
    <string name="btn_request_home_fragment">Solicitar viagem</string>
    <string name="text_id_empty_home_fragment">Digite seu Id</string>
    <string name="text_origin_empty_home_fragment">Digite sua origem</string>
    <string name="text_destination_empty_home_fragment">Digite seu destino</string>

<!--    Confirm Ride Fragment-->
    <string name="btn_choose_confirm_ride_fragment">Escolher</string>
    <string name="text_image_map_confirm_ride_fragment">Imagem do Mapa</string>

<!--    History Fragment-->
    <string name="btn_filter_history_fragment">Aplicar filtro</string>
    <string name="text_id_history_fragment">Digite o id</string>
    <string name="text_title_history_fragment">Histórico de viagens</string>

</resources>