<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:layout_marginTop="64dp"
            android:contentDescription="@string/imagem_do_logo_home_fragment"
            android:src="@drawable/img_taxi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="@font/urbanist_700"
            android:text="@string/text_request_home_fragment"
            android:textColor="#212121"
            android:textSize="32sp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_logo" />

        <EditText
            android:id="@+id/edit_customer_id"
            style="@style/ThemeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:importantForAutofill="no"
            android:inputType="number"
            android:drawableStart="@drawable/ic_account"
            android:hint="@string/text_id_home_fragment"
            android:drawablePadding="12dp"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>

        <EditText
            android:id="@+id/edit_origin"
            style="@style/ThemeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:importantForAutofill="no"
            android:inputType="text"
            android:drawableStart="@drawable/ic_origin"
            android:drawablePadding="12dp"
            android:hint="@string/text_origin_home_fragment"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_customer_id"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/destination"
            style="@style/ThemeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:importantForAutofill="no"
            android:inputType="text"
            android:drawableStart="@drawable/ic_destin"
            android:drawablePadding="12dp"
            android:hint="@string/text_destination_home_fragment"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_origin"
            tools:ignore="LabelFor" />


        <Button
            android:id="@+id/btn_request"
            style="@style/ThemeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="32dp"
            android:text="@string/btn_request_home_fragment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/destination" />

        <ProgressBar
            android:id="@+id/progress_loading"
            android:layout_width="50dp"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/destination"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_origin"
            tools:ignore="ContentDescription"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>